--- a/sample1.html
+++ b/sample1.html
@@ -1,7 +1,9 @@
 <DOCTYPE html>
 <html>
-<head>My first Page</head>
+<head>My second Page</head>
 <body>
 <h1>Hii Mom</h1>
+<h5>lov u</h5>
+<p>hsaihiuhiuuegsui</p>
 </body>
 </html>
